netbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox-community
  labels:
    k8s-app: netbox
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    k8s-app: netbox
